# VideoEditCore

./: .gitignore
QtTestPro/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
QtTestPro/Player/: .gitignore  CMakeLists.txt
